[package]
name = "keeper"
version = "0.1.0"
authors = ["donacrio <donatien.criaud@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
diesel = { version = "1.4", features = ["postgres"] }
diesel_migrations = "1.4"
dotenv = "0.15"
futures = "0.3"
hyper = "0.13"
openssl = "0.10"
# We need vendored openssl-sys for cross compilation
openssl-sys = { version = "0.9", features = ["vendored"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
